--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
     />
   </head>
   <body>
+    <!-- modal -->
+    <div class="modal-overlay show-modal">
+      <div class="modal">
+        <article class="newsletter-img-container">
+          <img src="./assets/images/newsletter.png" alt="" class="img" />
+        </article>
+        <article class="newsletter-info">
+          <button class="btn modal-close-btn">
+            <ion-icon name="close-outline"></ion-icon>
+          </button>
+          <form action="">
+            <h4 class="newsletter-title">Subscribe Newsletter.</h4>
+            <p class="newsletter-desc">
+              Subscribe the <b>Anon</b> to get latest products and discount
+              update.
+            </p>
+
+            <input
+              type="email"
+              class="form-input"
+              placeholder="Email Address"
+            />
+            <button type="submit" class="btn newsletter-btn">subscribe</button>
+          </form>
+        </article>
+      </div>
+    </div>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
