toast functionality added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- modal -->
-    <div class="modal-overlay show-modal">
+    <div class="modal-overlay">
       <div class="modal">
         <article class="newsletter-img-container">
           <img src="./assets/images/newsletter.png" alt="" class="img" />
@@ -42,6 +42,26 @@
             <button type="submit" class="btn newsletter-btn">subscribe</button>
           </form>
         </article>
+      </div>
+    </div>
+
+    <!-- notification-toast  -->
+    <div class="notification-toast-container">
+      <button class="toast-close-btn">
+        <ion-icon name="close-outline"></ion-icon>
+      </button>
+      <div class="toast-banner">
+        <img
+          src="./assets/images/products/jewellery-1.jpg"
+          alt=""
+          class="img"
+        />
+      </div>
+
+      <div class="toast-info">
+        <p class="toast-message">someone new just bought in</p>
+        <h4 class="toast-title">jewellery</h4>
+        <p class="toast-meta">2 minutes ago</p>
       </div>
     </div>
     <script
