mobile navigation functionality added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- modal -->
-    <div class="modal-overlay">
+    <div class="modal-overlay show-modal">
       <div class="modal">
         <article class="newsletter-img-container">
           <img src="./assets/images/newsletter.png" alt="" class="img" />
@@ -64,6 +64,561 @@
         <p class="toast-meta">2 minutes ago</p>
       </div>
     </div>
+
+    <!-- HEADER -->
+    <header class="header">
+      <div class="header-top">
+        <div class="container flex-container">
+          <ul class="social-links">
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </a>
+            </li>
+          </ul>
+          <p class="header-alert-news">
+            FREE SHIPPING THIS WEEK ORDER OVER - $55
+          </p>
+          <div class="header-top-actions">
+            <select name="currency">
+              <option value="USD">USD &dollar;</option>
+              <option value="EURO">EUR &euro;</option>
+            </select>
+            <select name="language">
+              <option value="en-US">English</option>
+              <option value="es-ES">Espa&ntilde;ol</option>
+              <option value="fr">Fran&ccedil;ais</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="header-main">
+        <div class="container flex-container">
+          <div class="logo"><span>D</span>-KART</div>
+          <div class="header-search-container">
+            <input
+              type="text"
+              class="form-input search-input"
+              placeholder="Search for product here"
+            />
+            <button class="search-btn">
+              <ion-icon name="search-outline"></ion-icon>
+            </button>
+          </div>
+          <div class="user-actions">
+            <a class="action-link">
+              <ion-icon name="person-outline"></ion-icon>
+            </a>
+
+            <a class="action-link">
+              <ion-icon name="heart-outline"></ion-icon>
+              <span class="count">0</span>
+            </a>
+
+            <a class="action-link">
+              <ion-icon name="bag-handle-outline"></ion-icon>
+              <span class="count">0</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <nav class="desktop-navigation-menu">
+        <div class="container flex-container">
+          <ul class="desktop-menu-category-list flex-container">
+            <li><a href="" class="menu-category"> HOME </a></li>
+            <li>
+              <a href="" class="menu-category" id="dropdown"> CATEGORIES </a>
+
+              <div class="dropdown-panel">
+                <ul class="dropdown-panel-list">
+                  <li class="menu-title">
+                    <a href=""> Electronics </a>
+                  </li>
+                  <li class="panel-list-item">
+                    <a href="">Desktop</a>
+                  </li>
+                  <li class="panel-list-item">
+                    <a href="">Laptop</a>
+                  </li>
+                  <li class="panel-list-item">
+                    <a href="">Camera</a>
+                  </li>
+                  <li class="panel-list-item">
+                    <a href="">Tablet</a>
+                  </li>
+                  <li class="panel-list-item">
+                    <a href="">Headphones</a>
+                  </li>
+                  <li class="panel-list-item">
+                    <a href="">
+                      <img
+                        src="./assets/images/electronics-banner-1.jpg"
+                        alt="headphones"
+                        class="img"
+                      />
+                    </a>
+                  </li>
+                </ul>
+                <ul class="dropdown-panel-list">
+                  <li class="menu-title">
+                    <a href="#">Men's</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Formal</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Casual</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Sports</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Jacket</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Sunglasses</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">
+                      <img
+                        src="./assets/images/mens-banner.jpg"
+                        alt="men's fashion"
+                        class="img"
+                      />
+                    </a>
+                  </li>
+                </ul>
+
+                <ul class="dropdown-panel-list">
+                  <li class="menu-title">
+                    <a href="#">Women's</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Formal</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Casual</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Perfume</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Cosmetics</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Bags</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">
+                      <img
+                        src="./assets/images/womens-banner.jpg"
+                        alt="women's fashion"
+                        class="img"
+                      />
+                    </a>
+                  </li>
+                </ul>
+
+                <ul class="dropdown-panel-list">
+                  <li class="menu-title">
+                    <a href="#">Electronics</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Smart Watch</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Smart TV</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Keyboard</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Mouse</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">Microphone</a>
+                  </li>
+
+                  <li class="panel-list-item">
+                    <a href="#">
+                      <img
+                        src="./assets/images/electronics-banner-2.jpg"
+                        alt="mouse collection"
+                        class="img"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a href="" class="menu-category category"> MEN'S </a>
+
+              <ul class="dropdown-list">
+                <li class="dropdown-list-item">
+                  <a href="#">Formal</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Casual</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Perfume</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Cosmetics</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Bags</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="" class="menu-category category"> WOMEN'S </a>
+              <ul class="dropdown-list">
+                <li class="dropdown-list-item">
+                  <a href="#">Dress & Frock</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Earrings</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Necklace</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Makeup Kit</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="" class="menu-category"> JEWELERY </a>
+              <ul class="dropdown-list">
+                <li class="dropdown-list-item">
+                  <a href="#">Earrings</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Couple Rings</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Necklace</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Bracelets</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="" class="menu-category"> PERFUME </a>
+              <ul class="dropdown-list">
+                <li class="dropdown-list-item">
+                  <a href="#">Clothes Perfume</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Deodorant</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Flower Fragrance</a>
+                </li>
+
+                <li class="dropdown-list-item">
+                  <a href="#">Air Freshener</a>
+                </li>
+              </ul>
+            </li>
+
+            <li><a href="" class="menu-category"> BLOG </a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="mobile-bottom-navigation">
+        <button class="action-btn" id="mobile-menu-open-btn">
+          <ion-icon name="menu-outline"></ion-icon>
+        </button>
+
+        <button class="action-btn">
+          <ion-icon name="bag-handle-outline"></ion-icon>
+
+          <span class="count">0</span>
+        </button>
+
+        <button class="action-btn">
+          <ion-icon name="home-outline"></ion-icon>
+        </button>
+
+        <button class="action-btn">
+          <ion-icon name="heart-outline"></ion-icon>
+
+          <span class="count">0</span>
+        </button>
+
+        <button class="action-btn" id="mobile-category-open-btn">
+          <ion-icon name="grid-outline"></ion-icon>
+        </button>
+      </div>
+      <aside class="sidebar">
+        <nav class="mobile-navigation-menu">
+          <div class="menu-top">
+            <h3>Menu</h3>
+            <button class="sidebar-close-btn">
+              <ion-icon name="close-outline"></ion-icon>
+            </button>
+          </div>
+          <ul class="mobile-menu-category-list">
+            <li class="menu-category">
+              <a href="#" class="menu-title">Home</a>
+            </li>
+
+            <li class="menu-category">
+              <button class="accordion-menu" -btn>
+                <p class="menu-title">Men's</p>
+
+                <div>
+                  <ion-icon name="add-outline" class="add-icon"></ion-icon>
+                  <ion-icon
+                    name="remove-outline"
+                    class="remove-icon"
+                  ></ion-icon>
+                </div>
+              </button>
+
+              <ul class="submenu-category-list">
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Shirt</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Shorts & Jeans</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Safety Shoes</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Wallet</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="menu-category">
+              <button class="accordion-menu" -btn>
+                <p class="menu-title">Women's</p>
+
+                <div>
+                  <ion-icon name="add-outline" class="add-icon"></ion-icon>
+                  <ion-icon
+                    name="remove-outline"
+                    class="remove-icon"
+                  ></ion-icon>
+                </div>
+              </button>
+
+              <ul class="submenu-category-list">
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Dress & Frock</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Earrings</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Necklace</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Makeup Kit</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="menu-category">
+              <button class="accordion-menu" -btn>
+                <p class="menu-title">Jewelry</p>
+
+                <div>
+                  <ion-icon name="add-outline" class="add-icon"></ion-icon>
+                  <ion-icon
+                    name="remove-outline"
+                    class="remove-icon"
+                  ></ion-icon>
+                </div>
+              </button>
+
+              <ul class="submenu-category-list">
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Earrings</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Couple Rings</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Necklace</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Bracelets</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="menu-category">
+              <button class="accordion-menu" -btn>
+                <p class="menu-title">Perfume</p>
+
+                <div>
+                  <ion-icon name="add-outline" class="add-icon"></ion-icon>
+                  <ion-icon
+                    name="remove-outline"
+                    class="remove-icon"
+                  ></ion-icon>
+                </div>
+              </button>
+
+              <ul class="submenu-category-list">
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Clothes Perfume</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Deodorant</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Flower Fragrance</a>
+                </li>
+
+                <li class="submenu-category">
+                  <a href="#" class="submenu-title">Air Freshener</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="menu-category">
+              <a href="#" class="menu-title">Blog</a>
+            </li>
+
+            <li class="menu-category">
+              <a href="#" class="menu-title">Hot Offers</a>
+            </li>
+          </ul>
+
+          <div class="menu-bottom">
+            <ul class="menu-category-list">
+              <li class="menu-category">
+                <button class="accordion-menu" -btn>
+                  <p class="menu-title">Language</p>
+
+                  <span>
+                    <ion-icon
+                      name="caret-back-outline"
+                      class="caret-back"
+                    ></ion-icon>
+                  </span>
+                </button>
+                <ul class="submenu-category-list">
+                  <li><a href="" class="submenu-category">English</a></li>
+                  <li><a href="" class="submenu-category">French</a></li>
+                  <li><a href="" class="submenu-category">Spanish</a></li>
+                </ul>
+              </li>
+              <li class="menu-category">
+                <button class="accordion-menu" -btn>
+                  <p class="menu-title">Currency</p>
+
+                  <span>
+                    <ion-icon
+                      name="caret-back-outline"
+                      class="caret-back"
+                    ></ion-icon>
+                  </span>
+                </button>
+                <ul class="submenu-category-list">
+                  <li><a href="" class="submenu-category">USD</a></li>
+                  <li><a href="" class="submenu-category">EUR</a></li>
+                </ul>
+              </li>
+            </ul>
+
+            <ul class="social-links">
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-facebook"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-twitter"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-instagram"></ion-icon>
+                </a>
+              </li>
+
+              <li>
+                <a href="#" class="social-link">
+                  <ion-icon name="logo-linkedin"></ion-icon>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </aside>
+    </header>
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
